<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.ac.telkomuniversity.student.ayasnindya.raras_1202150255_modul2.TakeAway">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        android:inputType="textCapCharacters"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:layout_marginTop="28dp"
        android:inputType="phone"
        android:hint="@string/phone" />

    <EditText
        android:id="@+id/alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/phone"
        android:layout_marginTop="20dp"
        android:inputType="textCapCharacters"
        android:hint="@string/alamat" />

    <EditText
        android:id="@+id/catatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/alamat"
        android:layout_marginTop="31dp"
        android:inputType="textCapCharacters"
        android:hint="@string/catatan" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/button_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/pilih_pesanan" />

        <Button
            android:id="@+id/button_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_time"
            android:layout_alignBottom="@+id/button_time"
            android:layout_marginLeft="67dp"
            android:layout_marginStart="67dp"
            android:layout_toEndOf="@+id/button_time"
            android:layout_toRightOf="@+id/button_time"
            android:onClick="showDatePickerDialog"
            android:text="@string/tanggal_tombol" />

        <Button
            android:id="@+id/button_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_main"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="19dp"
            android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp"
            android:onClick="showTimePickerDialog"
            android:text="@string/waktu_tombol" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_date"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="31dp"
            android:text="Pengambilan Pesanan Khusus"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>

