<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.ac.telkomuniversity.student.ayasnindya.raras_1202150255_modul2.MainActivity">

    <ImageView
        android:id="@+id/resto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="228dp"
        android:src="@drawable/splash_screen" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radiogroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/pilih_menu"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="27dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/dinein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dine_in" />

        <RadioButton
            android:id="@+id/takeaway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/take_away" />
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="76dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:text="@string/pesan_sekarang" />

</RelativeLayout>
